# Motion-Capture-Engine

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
esp-idf-test/: README_AUDIO_PLAYER.md  audio_player.py  platformio.ini
esp-idf-test/src/: audio_player.cpp  audio_player.h  flex_sensor.cpp  main.cpp  mpu6050.cpp  sensors.h
esp32-files/src/: flex_sensor.cpp  i2c_scanner.cpp  main.cpp  main.txt  mpu6050.cpp  sensors.h
libAudio/: Audio.cpp  Audio.h  CMakeLists.txt
libCalibrator/: CMakeLists.txt  calibration.cpp  calibration.h
libHand/: CMakeLists.txt  hand.cpp  hand.h
libIsolator/: Makefile  isolator.cpp  isolator.h  test_isolator.cpp
libPlot/: CMakeLists.txt  plot.cpp  plot.h
libSerial/: CMakeLists.txt  serial.cpp  serial.h
libUncoupler/: CMakeLists.txt  uncoupler.cpp  uncoupler.h
